force-app/main/default/objects/UnitRelation__c/UnitRelation__c.object-meta.xml
<CustomObject>
    <label>Unit Relation</label>
    <nameField>
        <displayFormat>UR-{000000}</displayFormat>
        <label>Unit Relation Nr.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>