force-app/main/default/objects/UnitRelation__c/fields/AccountAddress__c.field-meta.xml
<CustomField>
    <fullName>AccountAddress__c</fullName>
    <formula>IF(
     Account__r.LocationCity__c &lt;&gt; &apos;&apos;,
Account__r.LocationStreetNr__c + &quot;, &quot;+
Account__r.LocationZip__c + &apos; &apos; + Account__r.LocationCity__c ,
Account__r.BillingStreetNr__c + &quot;, &quot;+
Account__r.BillingZip__c + &apos; &apos; + Account__r.BillingCity__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Address</label>
    <type>Text</type>
</CustomField>