force-app/main/default/objects/UnitRelation__c/fields/AccountRecordType__c.field-meta.xml
<CustomField>
    <fullName>AccountRecordType__c</fullName>
    <formula>Account__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Record Type</label>
    <type>Text</type>
</CustomField>