force-app/main/default/objects/UnitRelation__c/fields/Deputy__c.field-meta.xml
<CustomField>
    <fullName>Deputy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deputy</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Unit Relations (Deputy)</relationshipLabel>
    <relationshipName>Deputy</relationshipName>
    <type>Lookup</type>
</CustomField>