force-app/main/default/objects/UnitRelation__c/fields/IsCustomerActual__c.field-meta.xml
<CustomField>
    <fullName>IsCustomerActual__c</fullName>
    <formula>if(ispickval( Customer__c ,&quot;Actual&quot;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Customer Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>