force-app/main/default/objects/UnitRelation__c/fields/IsCustomerOffline__c.field-meta.xml
<CustomField>
    <fullName>IsCustomerOffline__c</fullName>
    <formula>if(ispickval( Customer__c ,&quot;Offline&quot;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Customer Offline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>