force-app/main/default/objects/UnitRelation__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qualified Lead</label>
    <type>Checkbox</type>
</CustomField>