force-app/main/default/objects/UnitRelation__c/fields/PrintPlusProjectManager__c.field-meta.xml
<CustomField>
    <fullName>PrintPlusProjectManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Print Plus Project Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Unit Relations (Print Plus Project Manager)</relationshipLabel>
    <relationshipName>SegmentationProjectManager1</relationshipName>
    <type>Lookup</type>
</CustomField>