force-app/main/default/objects/UnitRelation__c/fields/PrintPlusProjectManagerDeputy__c.field-meta.xml
<CustomField>
    <fullName>PrintPlusProjectManagerDeputy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Print Plus Project Manager (Deputy)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Unit Relations (Print Plus Project Manager (Deputy))</relationshipLabel>
    <relationshipName>SegmentationsProjectManager2</relationshipName>
    <type>Lookup</type>
</CustomField>