force-app/main/default/objects/UnitRelation__c/fields/RomandieAccount__c.field-meta.xml
<CustomField>
    <fullName>RomandieAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gmund specific checkbox, ary</description>
    <label>Romandie Account</label>
    <type>Checkbox</type>
</CustomField>