force-app/main/default/objects/UnitRelation__c/fields/SupplierIndustry__c.field-meta.xml
<CustomField>
    <fullName>SupplierIndustry__c</fullName>
    <label>Supplier - Industry</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3D Visualisierungen</fullName>
            </value>
            <value>
                <fullName>Aufnahmeleitung</fullName>
            </value>
            <value>
                <fullName>Ausstatter</fullName>
            </value>
            <value>
                <fullName>Beleuchter</fullName>
            </value>
            <value>
                <fullName>Brennen/Drucken – CD/DVD</fullName>
            </value>
            <value>
                <fullName>Digitalisierung Filmmaterial</fullName>
            </value>
            <value>
                <fullName>Drehbuchautor</fullName>
            </value>
            <value>
                <fullName>Druck</fullName>
            </value>
            <value>
                <fullName>Editor</fullName>
            </value>
            <value>
                <fullName>Equipment Verleih</fullName>
            </value>
            <value>
                <fullName>Flugobjekte</fullName>
            </value>
            <value>
                <fullName>Grading</fullName>
            </value>
            <value>
                <fullName>Kamera Assistenz</fullName>
            </value>
            <value>
                <fullName>Kameramann</fullName>
            </value>
            <value>
                <fullName>Licht Assistenz</fullName>
            </value>
            <value>
                <fullName>Maske</fullName>
            </value>
            <value>
                <fullName>Materialhersteller</fullName>
            </value>
            <value>
                <fullName>Motion Designer</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Papierhandel</fullName>
            </value>
            <value>
                <fullName>Papierhersteller</fullName>
            </value>
            <value>
                <fullName>Produktionsleitung</fullName>
            </value>
            <value>
                <fullName>Regie/Realisation</fullName>
            </value>
            <value>
                <fullName>Requisiteur</fullName>
            </value>
            <value>
                <fullName>Runner</fullName>
            </value>
            <value>
                <fullName>Schauspieler</fullName>
            </value>
            <value>
                <fullName>Sound Engineers</fullName>
            </value>
            <value>
                <fullName>Sprecher</fullName>
            </value>
            <value>
                <fullName>Storyboard</fullName>
            </value>
            <value>
                <fullName>Stuntman</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>