force-app/main/default/objects/UnitRelation__c/fields/TechnicalConsultant__c.field-meta.xml
<CustomField>
    <fullName>TechnicalConsultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Consultant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Unit Relations (Technical Consultant)</relationshipLabel>
    <relationshipName>Classification</relationshipName>
    <type>Lookup</type>
</CustomField>