force-app/main/default/objects/UnitRelation__c/fields/TradeCategoryHYS__c.field-meta.xml
<CustomField>
    <fullName>TradeCategoryHYS__c</fullName>
    <label>Trade Category - HYS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Private Bank</fullName>
            </value>
            <value>
                <fullName>Tax Advisers</fullName>
            </value>
            <value>
                <fullName>Consulting Companies</fullName>
            </value>
            <value>
                <fullName>Law Firm</fullName>
            </value>
            <value>
                <fullName>Luxury Brand</fullName>
            </value>
            <value>
                <fullName>------------------</fullName>
            </value>
            <value>
                <fullName>Luxury Hotel</fullName>
            </value>
            <value>
                <fullName>Boutique Hotel</fullName>
            </value>
            <value>
                <fullName>Hotel Association</fullName>
            </value>
            <value>
                <fullName>Event Planner</fullName>
            </value>
            <value>
                <fullName>Wedding Planner</fullName>
            </value>
            <value>
                <fullName>-----------------------</fullName>
            </value>
            <value>
                <fullName>Stationary Store</fullName>
            </value>
            <value>
                <fullName>Flower Shop</fullName>
            </value>
            <value>
                <fullName>Design Store</fullName>
            </value>
            <value>
                <fullName>Department Store</fullName>
            </value>
            <value>
                <fullName>Online Retail</fullName>
            </value>
            <value>
                <fullName>Travel Retail</fullName>
            </value>
            <value>
                <fullName>-----------------</fullName>
            </value>
            <value>
                <fullName>Magazines</fullName>
            </value>
            <value>
                <fullName>Editing House</fullName>
            </value>
            <value>
                <fullName>Cultural Institution</fullName>
            </value>
            <value>
                <fullName>Online Blog</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>