force-app/main/default/objects/UnitRelation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Gmund Type Values as of 24.10.2014, might be extended later / ary</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>End Customer</fullName>
            </value>
            <value>
                <fullName>Printer / Processor</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Corporate Client</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Wholesaler</fullName>
            </value>
            <value>
                <fullName>Media Representative</fullName>
            </value>
            <value>
                <fullName>Gmund internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>