force-app/main/default/objects/UnitRelation__c/fields/ZInactiveAccountManager__c.field-meta.xml
<CustomField>
    <fullName>ZInactiveAccountManager__c</fullName>
    <formula>AccountManager__r.Account.Name  = &quot;Summary - Alumni Internal Accounts&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZInactiveAccountManager</label>
    <type>Checkbox</type>
</CustomField>