force-app/main/default/objects/UnitRelation__c/fields/ZInactiveDeputy__c.field-meta.xml
<CustomField>
    <fullName>ZInactiveDeputy__c</fullName>
    <formula>Deputy__r.Account.Name = &quot;Summary - Alumni Internal Accounts&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZInactiveDeputy</label>
    <type>Checkbox</type>
</CustomField>