force-app/main/default/objects/UnitRelation__c/fields/ZUserYesNo__c.field-meta.xml
<CustomField>
    <fullName>ZUserYesNo__c</fullName>
    <formula>IF(
 (OR(
AccountManager__r.Id =  $User.Id ,  Deputy__r.Id = $User.Id)),
1,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZUserYesNo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>