force-app/main/default/objects/UnitRelation__c/recordTypes/BLC.recordType-meta.xml
<RecordType>
    <fullName>BLC</fullName>
    <active>true</active>
    <label>BLC</label>
</RecordType>