force-app/main/default/objects/UnitRelation__c/recordTypes/CY.recordType-meta.xml
<RecordType>
    <fullName>CY</fullName>
    <active>true</active>
    <label>CY</label>
</RecordType>