force-app/main/default/objects/UnitRelation__c/recordTypes/gateB_Test.recordType-meta.xml
<RecordType>
    <fullName>gateB_Test</fullName>
    <active>true</active>
    <label>gateB Test</label>
</RecordType>