force-app/main/default/objects/UnitRelation__c/recordTypes/GbCh.recordType-meta.xml
<RecordType>
    <fullName>GbCh</fullName>
    <active>true</active>
    <label>GBCH</label>
</RecordType>