force-app/main/default/objects/UnitRelation__c/recordTypes/GBDE.recordType-meta.xml
<RecordType>
    <fullName>GBDE</fullName>
    <active>true</active>
    <label>GBDE</label>
</RecordType>