force-app/main/default/objects/UnitRelation__c/recordTypes/GBSGP.recordType-meta.xml
<RecordType>
    <fullName>GBSGP</fullName>
    <active>true</active>
    <label>GBSGP</label>
</RecordType>