force-app/main/default/objects/UnitRelation__c/recordTypes/GbUs.recordType-meta.xml
<RecordType>
    <fullName>GbUs</fullName>
    <active>true</active>
    <label>GBUS</label>
</RecordType>