force-app/main/default/objects/UnitRelation__c/recordTypes/Hbc.recordType-meta.xml
<RecordType>
    <fullName>Hbc</fullName>
    <active>true</active>
    <label>HBC</label>
</RecordType>