force-app/main/default/objects/UnitRelation__c/recordTypes/Hys.recordType-meta.xml
<RecordType>
    <fullName>Hys</fullName>
    <active>true</active>
    <label>HYS</label>
</RecordType>