force-app/main/default/objects/UnitRelation__c/recordTypes/Ma.recordType-meta.xml
<RecordType>
    <fullName>Ma</fullName>
    <active>false</active>
    <description>Inaktiviert 17.02.2016, Ryf</description>
    <label>MA</label>
</RecordType>