force-app/main/default/objects/UnitRelation__c/recordTypes/Vh.recordType-meta.xml
<RecordType>
    <fullName>Vh</fullName>
    <active>true</active>
    <label>VH</label>
</RecordType>