force-app/main/default/objects/UnitRelation__c/recordTypes/Xb.recordType-meta.xml
<RecordType>
    <fullName>Xb</fullName>
    <active>true</active>
    <label>XB</label>
</RecordType>