force-app/main/default/objects/UnitRelation__c/listViews/AllGbch.listView-meta.xml
<ListView>
    <fullName>AllGbch</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>AccountAddress__c</columns>
    <columns>AccountManager__c</columns>
    <columns>Deputy__c</columns>
    <columns>TechnicalConsultant__c</columns>
    <columns>Customer__c</columns>
    <columns>Supplier__c</columns>
    <columns>Partner__c</columns>
    <columns>Comment__c</columns>
    <columns>AccountRecordType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>UnitRelation__c.GbCh</value>
    </filters>
    <label>All GBCH</label>
    <language>en_US</language>
</ListView>