force-app/main/default/objects/UnitRelation__c/listViews/X100_All_Unit_Relations.listView-meta.xml
<ListView>
    <fullName>X100_All_Unit_Relations</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Account__c</columns>
    <columns>AccountManager__c</columns>
    <columns>Customer__c</columns>
    <columns>Supplier__c</columns>
    <columns>Partner__c</columns>
    <columns>AccountRecordType__c</columns>
    <filterScope>Everything</filterScope>
    <label>100 - All Unit Relations</label>
    <language>en_US</language>
</ListView>